turtleart.polygon7.Polygon7.scala.error
Erreur de compilation :
Polygon7:2: error: integer number too large
  avance(80);droite(51,4285714286);avance(80);droite(51,4285714286);avance(80);droite(51,4285714286);avance(80);droite(51,4285714286);avance(80);droite(51,4285714286);avance(80);droite(51,4285714286);avance(80);droite(51,4285714286);
                       ^Polygon7:2: error: integer number too large
  avance(80);droite(51,4285714286);avance(80);droite(51,4285714286);avance(80);droite(51,4285714286);avance(80);droite(51,4285714286);avance(80);droite(51,4285714286);avance(80);droite(51,4285714286);avance(80);droite(51,4285714286);
                                                        ^Polygon7:2: error: integer number too large
  avance(80);droite(51,4285714286);avance(80);droite(51,4285714286);avance(80);droite(51,4285714286);avance(80);droite(51,4285714286);avance(80);droite(51,4285714286);avance(80);droite(51,4285714286);avance(80);droite(51,4285714286);
                                                                                         ^Polygon7:2: error: integer number too large
  avance(80);droite(51,4285714286);avance(80);droite(51,4285714286);avance(80);droite(51,4285714286);avance(80);droite(51,4285714286);avance(80);droite(51,4285714286);avance(80);droite(51,4285714286);avance(80);droite(51,4285714286);
                                                                                                                          ^Polygon7:2: error: integer number too large
  avance(80);droite(51,4285714286);avance(80);droite(51,4285714286);avance(80);droite(51,4285714286);avance(80);droite(51,4285714286);avance(80);droite(51,4285714286);avance(80);droite(51,4285714286);avance(80);droite(51,4285714286);
                                                                                                                                                           ^Polygon7:2: error: integer number too large
  avance(80);droite(51,4285714286);avance(80);droite(51,4285714286);avance(80);droite(51,4285714286);avance(80);droite(51,4285714286);avance(80);droite(51,4285714286);avance(80);droite(51,4285714286);avance(80);droite(51,4285714286);
                                                                                                                                                                                            ^Polygon7:2: error: integer number too large
  avance(80);droite(51,4285714286);avance(80);droite(51,4285714286);avance(80);droite(51,4285714286);avance(80);droite(51,4285714286);avance(80);droite(51,4285714286);avance(80);droite(51,4285714286);avance(80);droite(51,4285714286);
                                                                                                                                                                                                                             ^