turtleart.polygon7.Polygon7.scala.code
override def run() {
  avance(80);droite(51,4285714286);avance(80);droite(51,4285714286);avance(80);droite(51,4285714286);avance(80);droite(51,4285714286);avance(80);droite(51,4285714286);avance(80);droite(51,4285714286);avance(80);droite(51,4285714286);
}